noinst_LTLIBRARIES = libbase.la

libbase_la_CXXFLAGS = $(AM_CXXFLAGS) -I..
libbase_la_SOURCES = basictypes.h casts.h commandlineflags.h docid.h \
		     int128.cc int128.h integral_types.h logging.cc \
		     logging.h macros.h port.h scoped_ptr.h stl_decl.h \
		     stl_decl_msvc.h stl_decl_osx.h stringprintf.cc \
		     stringprintf.h strtoint.cc strtoint.h template_util.h \
		     type_traits.h
